--- a/imgui-glow-renderer/Cargo.toml
+++ b/imgui-glow-renderer/Cargo.toml
@@ -10,16 +10,16 @@ categories = ["gui", "rendering"]
 
 [dependencies]
 imgui = { version = "0.11.0", path = "../imgui" }
-glow = "0.12.0"
+glow = "0.12.3"
 memoffset = "0.9"
 
 [dev-dependencies]
-glutin = "0.31.1"
+glutin = "0.31.3"
 glutin-winit = "0.4.2"
 imgui-winit-support = { version = "0.11.0", path = "../imgui-winit-support" }
-image = "0.23"
-raw-window-handle = "0.5.0"
-winit = { version = "0.29.3", features = ["rwh_05"] }
+image = { version = "0.25.0", features = ["jpeg"] }
+raw-window-handle = "0.5.2"
+winit = { version = "0.29.15", features = ["rwh_05"] }
 
 [features]
 # Features here are used to opt-out of compiling code that depends on certain
@@ -28,14 +28,14 @@ winit = { version = "0.29.3", features = ["rwh_05"] }
 # if you are certain you will only target platforms that lack the corresponding
 # feature.
 default = [
-  "gl_extensions_support",
-  "debug_message_insert_support",
-  "bind_vertex_array_support",
-  "vertex_offset_support",
-  "clip_origin_support",
-  "bind_sampler_support",
-  "polygon_mode_support",
-  "primitive_restart_support",
+    "gl_extensions_support",
+    "debug_message_insert_support",
+    "bind_vertex_array_support",
+    "vertex_offset_support",
+    "clip_origin_support",
+    "bind_sampler_support",
+    "polygon_mode_support",
+    "primitive_restart_support",
 ]
 # Enable checking for OpenGL extensions
 gl_extensions_support = []
